syntax = "proto3";
package zetachain.zetacore.fungible;

import "common/common.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/zetacore/x/fungible/types";

message ForeignCoin {
  //  string index = 1;
  string zrc20_contract_address = 2; // index
  string asset = 3;
  int64 foreign_chain_id = 4;
  uint32 decimals = 5;
  string name = 6;
  string symbol = 7;
  common.CoinType coin_type = 8;
  uint64 gas_limit = 9;
  bool paused = 10;
  string liquidity_cap = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
}
